crates/gridwell-writer-rtf/tests/snapshots/snapshots__align-left-center-right.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Left\cell
\pard\intbl\qc\b Center\cell
\pard\intbl\qr\b Right\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl aaa\cell
\pard\intbl\qc bbb\cell
\pard\intbl\qr ccc\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl d\cell
\pard\intbl\qc e\cell
\pard\intbl\qr f\cell
\row
}
