crates/gridwell-writer-rtf/tests/snapshots/snapshots__cell-colors.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red192\green57\blue43;\red41\green128\blue185;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Label\cell
\pard\intbl\plain\b Temp\cell
\row
\trowd\cellx2160\clcbpat3\cellx4320
\pard\intbl\plain Fire\cell
\pard\intbl\plain\cf2 hot\cell
\row
\trowd\cellx2160\clcbpat4\cellx4320
\pard\intbl\plain Ice\cell
\pard\intbl\plain\cf2 cold\cell
\row
}
