crates/gridwell-writer-rtf/tests/snapshots/snapshots__colspan-basic.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx6480
\pard\intbl\b \cell
\pard\intbl\qr\b Scores\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Name\cell
\pard\intbl\qr\b Q1\cell
\pard\intbl\qr\b Q2\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Alice\cell
\pard\intbl\qr 90\cell
\pard\intbl\qr 95\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Bob\cell
\pard\intbl\qr 85\cell
\pard\intbl\qr 88\cell
\row
}
