crates/gridwell-writer-rtf/tests/snapshots/snapshots__colspan-full-width.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx6480
\pard\intbl\qc\b Full-width spanner\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b A\cell
\pard\intbl\b B\cell
\pard\intbl\b C\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl 1\cell
\pard\intbl 2\cell
\pard\intbl 3\cell
\row
}
