crates/gridwell-writer-rtf/tests/snapshots/snapshots__column-widths-mixed.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx1800\cellx3960\cellx6120\cellx8280
\pard\intbl\plain\b Fixed\cell
\pard\intbl\plain\b Percent\cell
\pard\intbl\plain\b Fraction\cell
\pard\intbl\plain\b Auto\cell
\row
\trowd\cellx1800\cellx3960\cellx6120\cellx8280
\pard\intbl\plain 120px\cell
\pard\intbl\plain 25%\cell
\pard\intbl\plain 1fr\cell
\pard\intbl\plain auto\cell
\row
}
