crates/gridwell-writer-rtf/tests/snapshots/snapshots__combining-chars.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Form\cell
\pard\intbl\plain\b Text\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain composed\cell
\pard\intbl\plain caf\u233?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain decomposed\cell
\pard\intbl\plain cafe\u769?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain stacked\cell
\pard\intbl\plain a\u768?\u769?\u770?\cell
\row
}
