crates/gridwell-writer-rtf/tests/snapshots/snapshots__conditional-striping.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red236\green240\blue241;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Index\cell
\pard\intbl\b Value\cell
\row
\trowd\clcbpat3\cellx2160\clcbpat3\cellx4320
\pard\intbl 0\cell
\pard\intbl a\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl 1\cell
\pard\intbl b\cell
\row
\trowd\clcbpat3\cellx2160\clcbpat3\cellx4320
\pard\intbl 2\cell
\pard\intbl c\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl 3\cell
\pard\intbl d\cell
\row
}
