crates/gridwell-writer-rtf/tests/snapshots/snapshots__decimal-char-align.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Item\cell
\pard\intbl\plain\b Amount\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain A\cell
\pard\intbl\plain 1234.5\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain B\cell
\pard\intbl\plain 6.789\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain C\cell
\pard\intbl\plain 42.0\cell
\row
}
