crates/gridwell-writer-rtf/tests/snapshots/snapshots__financial-report.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red249\green249\blue249;\red245\green245\blue245;}
\pard{\b\fs36 Quarterly P&L}\par
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Line item\cell
\pard\intbl\qr\b Q1\cell
\pard\intbl\qr\b Q2\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Revenue\cell
\pard\intbl\qr $1,200\cell
\pard\intbl\qr $1,350\cell
\row
\trowd\cellx2160\clcbpat3\cellx4320\clcbpat3\cellx6480
\pard\intbl COGS\cell
\pard\intbl\qr $700\cell
\pard\intbl\qr $760\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Opex\cell
\pard\intbl\qr $300\cell
\pard\intbl\qr $320\cell
\row
\trowd\clcbpat4\cellx2160\clcbpat4\cellx4320\clcbpat4\cellx6480
\pard\intbl\b Net income\cell
\pard\intbl\qr\b $200\cell
\pard\intbl\qr\b $270\cell
\row
\par
\pard{\fs18 Unaudited management figures.}\par
}
