crates/gridwell-writer-rtf/tests/snapshots/snapshots__fixed-table-width.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\plain\b A\cell
\pard\intbl\plain\b B\cell
\pard\intbl\plain\b C\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain 1\cell
\pard\intbl\plain 2\cell
\pard\intbl\plain 3\cell
\row
}
